src/components/Layout/Header/Navigation/Navigation.module.scss
@import "../../../../vars";

.DesktopNav {
  display: none;

  @include min-width(768px) {
    @include flex(row, flex-end, center);
    @include font("XS");

    a {
      padding: 0 0.5rem;
      // margin-right: 2rem;
      transition: 0.5s;
      text-align: center;
    }

    a:hover {
      color: $primaryDD;
    }
  }

  @include min-width(1050px) {
    font-size: 1.7rem;
    // @include font("S");
  }

  @include min-width(1250px) {
    @include font("M");
  }
}

.MobileNav {
  @include flex(column, flex-start, flex-start);

  position: fixed;
  width: 80vw;
  height: 100vh;
  top: 0;
  right: 0;
  padding: $spaceL $spaceM;
  background: white;
  z-index: 1500;

  a {
    @include font("S");
    height: 3rem;
    margin-bottom: $spaceS;
  }

  @include min-width(768px) {
    display: none;
  }
}

.MenuButton {
  @include font("L");
  @include flex(column, center, center);

  position: absolute;
  top: 1rem;
  right: 1rem;
  z-index: 3000;
  background: white;
  height: 5rem;
  width: 5rem;
  border-radius: 50%;
  box-shadow: inset 0 0 0 1px rgba($gray6, 0.2);

  @include min-width(768px) {
    display: none;
  }
}

.Backdrop {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background: rgba($gray5, 0.8);
  z-index: 1000;

  @include min-width(1000px) {
    display: none;
  }
}

.SubLink {
  @include font("XS");
  margin-left: $spaceM;
}

.MenuItemWrapper {
  @include flex(row, center, center);

  margin-right: 2rem;

  @include min-width(1000px) {
    margin-right: 4rem;
  }

  .DeadLink {
    cursor: pointer;
    transition: 0.5s;

    &:hover {
      color: $primaryDD;
    }
  }

  .InfoSubMenu {
    @include flex(column, flex-start, flex-start);

    background: white;
    visibility: hidden;
    opacity: 0;
    position: absolute;
    top: 4rem;
    left: -3rem;
    padding: $spaceM;
    transition: 0.5s;
    width: 35rem;

    a {
      @include font("XS");
      margin-bottom: $spaceS;
      letter-spacing: 0.1rem;

      @include min-width(1500px) {
        @include font("S");
      }
    }

    a:hover {
      color: $primaryDD;
    }
  }

  // .ServicesSubMenu {
  //   width: 38rem;
  // }

  // .ComplianceSubMenu {
  //   width: 20rem;
  // }

  &:hover {
    .InfoSubMenu {
      visibility: visible;
      opacity: 1;
    }
  }
}

.Icon {
  color: $primaryD;
}

